--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,8 +10,20 @@
       "settings": {
         "github.copilot.enable": false,
         "github.copilot.inlineSuggest.enable": false,
-        "github.copilotchat.enable": false
+        "github.copilotchat.enable": false,
+        "github.copilot.advanced": {
+          "inlineSuggest": {
+            "enable": false
+          },
+          "panel": {
+            "enable": false
+          },
+          "commands.enable": false,
+          "notebooks.enable": false,
+          "chat.enable": false
+        }
       }
     }
-  }
+  },
+  "postCreateCommand": "pip install pytest"
 }
